# Copyright © 2025 Leviftas authors. All rights reserved.
#
# Licensed under the GNU General Public License v3.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# https://www.gnu.org/licenses/gpl-3.0.html
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# pyproject.toml
#
# Leviftas SDK configuration file.
#
# - Author   : FrostLeo <frostleo.dev@gmail.com>
# - Created  : 2025/10/10
# - Modified : 2025/10/10

[build-system]
requires = [
    "setuptools>=78.1.1",
    "wheel>=0.45.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "leviftas"
dynamic = [
    "version",
]
description = "A distributed, modular SDK for centralized data platform built on Django Rest Framework."
readme = "README.md"
license = "GPL-3.0"
license-files = [
    "LICENSE",
]
authors = [
    {name = "Frost Leo", email = "frostleo.dev@gmail.com"},
]
maintainers = [
    {name = "Frost Leo", email = "frostleo.dev@gmail.com"},
]
keywords = [
    "leviftas",
    "data platform",
    "distributed",
    "modular",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Framework :: Pydantic :: 2",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: OpenTelemetry",
    "Topic :: System :: Systems Administration",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.9",
    "typing_extensions>=4.15.0",
]

[project.urls]
Download = "https://github.com/Frost-Leo/Leviftas/archive/refs/heads/main.zip"
Homepage = "https://github.com/Frost-Leo/Leviftas"
Issues = "https://github.com/Frost-Leo/Leviftas/issues"
Repository = "https://github.com/Frost-Leo/Leviftas"
Wiki = "https://github.com/Frost-Leo/Leviftas/wiki"

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "leviftas.__version__"}

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools.package-dir]
"" = "src"